--- a/src/App.less
+++ b/src/App.less
@@ -1,12 +1,60 @@
 @import "~antd/dist/antd.dark.less";
 @import "./ant-custom.less";
 
-body {
-  --row-highlight: @background-color-base;
+/* Text */
+h1, h2, p, th, td, span {
+  position: relative;
+	margin: unset;
+	text-decoration: none;
+	color: var(--black) !important;
+  opacity: 0.9;
+  font-size: 16px;
+}
+
+a, i {
+  text-decoration: none;
+  margin: var(--spacing-xs);
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-style: normal;
+}
+span {
+  opacity: 0.85;
+  font-size: 14px;
+  text-align: center;
+  max-width: 400px;
+}
+*:focus-visible {
+  outline: unset;
+}
+.text-gradient {
+  opacity: 1 !important;
+  background-image: var(--gradient) !important;
+	-webkit-background-clip: text !important;
+	-webkit-text-fill-color: transparent !important;
+}
+.disabled {
+  cursor: not-allowed !important;
+  opacity: var(--disabled-opacity) !important;
+}
+.bicyclette {
+  font-family: 'Bicyclette', 'Roboto', sans-serif;
+}
+.bicyclette-bold {
+  font-family: 'Bicyclette-Bold', 'Roboto', sans-serif;
+}
+.jet-icons {
+  font-family: 'Jet-Icons';
+  font-size: 27px;
 }
 
 .app-title {
-  font-family: "FF Oxide Solid";
+  font-family: "Bicyclette";
   font-style: normal;
   font-weight: 300;
   letter-spacing: 0px;
@@ -18,25 +66,57 @@ body {
 }
 
 .ant-layout-header {
-  align-items: center;
-  height: 42px;
-  padding: 0 20px;
-  color: rgba(255, 255, 255, 0.85);
-  line-height: 64px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  div {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+h1.ant-typography, h2.ant-typography, h3.ant-typography, h4.ant-typography, h5.ant-typography {
+  position: relative;
+	margin: unset;
+	text-decoration: none;
+  opacity: 0.9;
+  font-family: 'Bicyclette-Bold', sans-serif;
+
+  .ant-typography-secondary {
+    margin: 0 0 -12px 0;
+    opacity: var(--disabled-opacity) !important;
+  }
+}
+
+.ant-table {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: rgba(255, 255, 255, 0.85);
+  font-variant: tabular-nums;
+  line-height: 1.5715;
+  list-style: none;
+  font-feature-settings: 'tnum', "tnum";
+  position: relative;
+  z-index: 0;
+  font-size: 14px;
+  background: var(--white);
+  border-radius: 2px;
 }
 
 .App-Bar {
-  -webkit-box-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  align-items: center;
-  flex-direction: row;
-  width: 100%;
-  top: 0px;
-  position: relative;
-  padding: 1rem;
-  z-index: 2;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  height: calc(100vh - var(--spacing-lg));
+  padding: calc(var(--spacing-lg)/2) 0;
+  width: var(--nav-width);
+  box-shadow: var(--neu-shadow);
+  background: var(--white);
+  z-index: 1000;
 
   .ant-menu-horizontal {
     border-bottom-color: transparent;
@@ -110,14 +190,6 @@ em {
   text-decoration: none;
 }
 
-.wallet-key {
-  padding: 0.1rem 0.5rem 0.1rem 0.7rem;
-  margin-left: 0.3rem;
-  border-radius: 0.5rem;
-  display: flex;
-  align-items: center;
-}
-
 .ant-notification {
   a {
     color: blue;
@@ -129,6 +201,7 @@ em {
 .ant-layout-content {
   display: flex;
   overflow: auto;
+  background-color: var(--white);
 }
 
 .flexColumn {
